--- a/templates/excursions/excursions.html
+++ b/templates/excursions/excursions.html
@@ -7,15 +7,14 @@
 
 <section>
 
-    <h1 class="text-center mt-5">Embark on Unforgettable Excursions</h1>
-
+    <h1 class="text-center mt-5 h1-title">Embark on Unforgettable Excursions</h1>
     <section>
         <div class="card-container mt-5">
             {% for excursion in excursions %}
             <div class="card-wrapper">
                 <div class="image-container">
-                <a class="position-relative" href="{% url 'excursion_detail' excursion.slugy %}"><img
-                        src="{{excursion.main_image.url}}" alt="{{excursion.image_name}}">
+                <a class="position-relative"  href="{% url 'excursion_detail' excursion.slugy %}"><img
+                    id="itemImg" src="{{excursion.main_image.url}}" alt="{{excursion.image_name}}">
                 </a>
                 {% if excursion.duration_time%}
                 <span class="img_icon1 badge rounded-pill bg-warning text-dark">
