fix error in jx nand bootstrap cdn

--- a/templates/excursions/excursion_details.html
+++ b/templates/excursions/excursion_details.html
@@ -49,11 +49,12 @@
 
                         <!-- date -->
                         <div class="form-group mt-3">
-                            <label for="date">Select Date and Travellers {{tomorrow_str}}</label>
+                            <label for="date">Select Date and Travellers</label>
                             <input type="text" class="form-control" id="date" name="excursion_date" min="{{tomorrow_str}}"
                             value="Select Date"
                                 required>
                         </div>
+                    
 
                         <!-- Times availables -->
                         <select name="selected_time" class="form-select mt-3" required>
