--- a/templates/excursions/excursions.html
+++ b/templates/excursions/excursions.html
@@ -49,8 +49,8 @@
                     ${{excursion.Price}}
                 </div>
                 <div class="button_card">
-                    <a href="{% url 'excursion_detail' excursion.slugy %}" class="btn button my_hover sear-btn btn-outline-secondary">Book Now</a>
-                    <a href="{% url 'excursion_detail' excursion.slugy %}" class="btn button my_hover sear-btn btn-outline-secondary">Learn More</a>
+                    <a href="{% url 'excursion_detail' excursion.slugy %}" class="btn my-button my_hover sear-btn btn-outline-secondary">Book Now</a>
+                    <a href="{% url 'excursion_detail' excursion.slugy %}" class="btn my-button my_hover sear-btn btn-outline-secondary">Learn More</a>
                 </div>
             </div>
             {% endfor %}
