--- a/templates/excursions/filters.html
+++ b/templates/excursions/filters.html
@@ -46,8 +46,8 @@
                 ${{excursion.Price}}
             </div>
             <div class="button_card">
-                <a href="{% url 'excursion_detail' excursion.slugy %}" class="button">Book Now</a>
-                <a href="{% url 'excursion_detail' excursion.slugy %}" class="button">Learn More</a>
+                <a href="{% url 'excursion_detail' excursion.slugy %}" class="my-button">Book Now</a>
+                <a href="{% url 'excursion_detail' excursion.slugy %}" class="my-button">Learn More</a>
             </div>
         </div>
          {% endfor %}
