--- a/templates/administrator/administrator_base.html
+++ b/templates/administrator/administrator_base.html
@@ -72,11 +72,11 @@
 
 
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'admin-excursion' %}"> <i class="fa-solid fa-compass"></i>
+                        <a class="nav-link" href="{% url 'admin-excursion' %}"><i class="fa-solid fa-mountain-sun"></i>
                             Excursions</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'seller' %}"> <i class="fa-solid fa-compass"></i>
+                        <a class="nav-link" href="{% url 'seller' %}"> <i class="fa-brands fa-salesforce"></i>
                             Sellers</a>
 
                         <!-- <li class="nav-item">
@@ -113,10 +113,14 @@
                             Home Page</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'pageVisit' %}"><i class="fa-solid fa-house-user"></i></i>
-                            pageVisit</a>
+                        <a class="nav-link" href="{% url 'pageVisit' %}"><i class="fa-solid fa-eye"></i>
+                            PageVisit</a>
                     </li>
 
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'all_post' %}"><i class="fa-solid fa-signs-post"></i>
+                            Post</a>
+                    </li>
                 </ul>
             </div>
         </div>
