--- a/templates/checkout/checkout.html
+++ b/templates/checkout/checkout.html
@@ -44,7 +44,7 @@
             </div>
             <span class="text-muted">${{item.subTotal | floatformat:2}}</span>
           </li>
-          {% endfor %}
+      
           <li class="list-group-item d-flex justify-content-between">
             <span>Total (US)</span>
             <strong>${{total | floatformat:2}}</strong>
@@ -74,6 +74,7 @@
         </ul>
 
         <!-- form for updating quantity-->
+        {% if item.excursion.dicount %}
       <form method="POST" action="{% url 'apply_discount' %}">
         {% csrf_token %}
         <div class="col-md-6 mb-3 list-group-item">
@@ -87,7 +88,9 @@
         </div>
     </div>
     </form>
+    {% endif %}
       </div>
+      {% endfor %}
 
     <!-- card pytments infomation -->
     <div class="col-md-8 order-md-1">
