--- a/templates/excursions/excursion_details.html
+++ b/templates/excursions/excursion_details.html
@@ -73,7 +73,6 @@
                                 required>
                         </div>
                     
-
                         <!-- Times availables -->
                         <select name="selected_time" class="form-select mt-3" required>
                             <option value="">Select a time</option>
@@ -93,6 +92,7 @@
                             {%endif%}
                             max="99" data-item_id="{{excursions.id}}" required>
                         </div>
+                        {% if not excursions.just_adult%}
                         <!-- number of childrens -->
                         <div class="form-group mt-3">
                             <label for="id_child_qty"> Child (5 - 11 years old)</label>
@@ -105,6 +105,7 @@
                             <input type="number" class="form-control" id="id_infant_qty" name="infant_qty" value="0"
                                 min="0" max="99">
                         </div>
+                        {% endif %}
                         <!-- pick up info -->
                         <div class="form-group mt-3">
                             <label for="inputCity">Manual pick up Location</label>
