--- a/templates/excursions/excursion_details.html
+++ b/templates/excursions/excursion_details.html
@@ -1,10 +1,9 @@
 {% extends 'excursions/excursions_base.html' %}
-<title>{% block title %}{{excursions.title}}{% endblock %}</title>
-{% block description %}{{ description }}{% endblock %}
+{% block title %}{{excursions.title}}{% endblock %}
+{% block description %}{{ excursions.meta_description }}{% endblock %}
 {% load static %}
 <script
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDG9TokC3lqJJD7aPJhfAotYVBXq0508ng&libraries=places"></script>
-
 
 {% block content %}
 <!-- header for adding to cart -->
