--- a/templates/administrator/administrator_base.html
+++ b/templates/administrator/administrator_base.html
@@ -6,12 +6,13 @@
     <!-- Metas -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="Explore our huge selection of excursions and places to stay in punta cana.
+    <meta name="description"
+    content="{% block description %}Explore our huge selection of excursions and places to stay in punta cana.
     Visit Saona Island, an idyllic speck of sand and palm trees in the blue Caribbean, 
     during a full-day tour from Punta Cana. Board a small speedboat for the thrilling ride out to the island, 
     including a stop at a natural swimming pool where you can see starfish.
-     And stay in one of our beautiful rooms or rent a whole apartment with us at a very low price. 
-    ">
+     And stay in one of our beautiful rooms or rent a whole apartment with us at a very low price. {% endblock %}">
+
     <meta name="keywords" content="punta cana, bavaro, rent, room,excursions,Visit Saona Island,
     blue Caribbean, natural swimming pool, beautiful rooms, rent a whole apartment,
      Day Trip, things to do in puntacana, puntacana tours, Scape Park Punta Cana,
@@ -23,7 +24,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="canonical" href="https://myonlinerecipes.herokuapp.com/">
     <meta name="robots" content="index, follow">
-    <title>Yara Beach </title>
+    <title>{% block title %}Punta Cana Discovery{% endblock %}</title>
     <!-- Bootstrap 5.0.2-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
