fix title for seo

--- a/templates/excursions/excursions.html
+++ b/templates/excursions/excursions.html
@@ -7,7 +7,7 @@
 
 <section>
 
-    <h1 class="text-center mt-5 h1-title">Embark on Unforgettable Excursions</h1>
+    <h1 class="text-center mt-5 h1-title">Embark on Unforgettable Excursions in Punta Cana</h1>
     <section>
         <div class="card-container mt-5">
             {% for excursion in excursions %}
